# Practica02-Ayed

./: CMakeLists.txt  Makefile  README.md
Practica-02/: CMakeLists.txt
Practica-02/include/: matrix_t.hpp  rational_t.hpp  vector_t.hpp
Practica-02/src/: CMakeLists.txt  main_p2.cpp  rational_t.cpp
